fix: fixed general navbar overflow

--- a/css/components/shared/navbar/navbar.css
+++ b/css/components/shared/navbar/navbar.css
@@ -1,6 +1,5 @@
 .navbar {
   display: flex;
-  width: 100%;
   max-width: 100vw;
   height: 56px;
   background-color: #fff;
@@ -11,7 +10,6 @@
   position: relative;
   text-decoration: none;
   color: #7a6eaa;
-  position: relative;
   z-index: 999;
   transition: 200ms;
   transition-timing-function: ease-in-out;
@@ -34,6 +32,13 @@
 .navbar .dropdown {
   width: fit-content;
   height: fit-content;
+  position: relative;
+}
+.navbar .dropdown .sx-block {
+  display: none;
+}
+.navbar .dropdown .lg-block {
+  display: block;
 }
 .navbar .dropdownbtn__link {
   text-decoration: none;
@@ -56,7 +61,7 @@
   background-color: white;
   border-radius: 16px;
   border: 1px solid #e7e3eb;
-  z-index: 1;
+  z-index: 100 !important;
   position: absolute;
 }
 .navbar .dropdown__content.full-width {
@@ -262,19 +267,13 @@
   font-size: 16px;
 }
 .navbar .connect-wallet .menu-button {
-  position: relative;
-  -webkit-box-align: center;
-  align-items: center;
   border: 0px;
   border-radius: 16px;
   box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
   cursor: pointer;
-  display: inline-flex;
   font-family: inherit;
   font-size: 16px;
   font-weight: 600;
-  -webkit-box-pack: center;
-  justify-content: center;
   letter-spacing: 0.03em;
   line-height: 1;
   opacity: 1;
@@ -325,21 +324,34 @@
   display: none;
 }
 
-@media screen and (max-width: 576px) {
-  .bnb-smart-chain__dropdown {
-    padding: 0.25rem 0.5rem 0.25rem 1rem;
-  }
-  .bnb-smart-chain__dropdown .dropdownbtn__link {
-    padding-left: 2rem;
-  }
-}
 @media screen and (max-width: 1078px) {
-  .bnb-smart-chain .dropdown .d-xl-block {
+  .navbar-r__currency {
+    display: none;
+  }
+  .bnb-smart-chain .dropdown {
+    width: 95px;
+  }
+  .bnb-smart-chain .dropdownbtn__link {
+    width: inherit;
+  }
+  .bnb-smart-chain .dropdown .sx-block {
+    display: block;
+  }
+  .bnb-smart-chain .dropdown .lg-block {
     display: none;
   }
 }
 @media screen and (max-width: 968px) {
   .navbar-r__currency {
+    display: none;
+  }
+  .navbar-l__logo .bunny-logo-small {
+    display: block !important;
+    height: 35px;
+    width: 2rem35px;
+    padding-left: 1rem;
+  }
+  .navbar-l__logo .bunny-logo-main {
     display: none;
   }
 }
@@ -351,15 +363,6 @@
 @media screen and (max-width: 852px) {
   .navbar {
     padding-left: 0;
-  }
-  .navbar-l__logo .bunny-logo-small {
-    display: block !important;
-    height: 35px;
-    width: 2rem35px;
-    padding-left: 1rem;
-  }
-  .navbar-l__logo .bunny-logo-main {
-    display: none;
   }
   .navbar-l__menu {
     display: flex;
@@ -399,7 +402,6 @@
     color: #7a6eaa;
   }
   .navbar-l__menu .dropdownbtn__link > .icona {
-    size: 10px;
     display: block !important;
   }
   .navbar-l__menu .dropdown__content {
@@ -417,6 +419,11 @@
   }
   .connect-wallet-lg {
     display: none;
+  }
+}
+@media screen and (max-width: 576px) {
+  .bnb-smart-chain__dropdown {
+    padding: 0.25rem 0.5rem 0.25rem 1rem;
   }
 }
 
